cabal-version:      3.0
name:               disco-wasm
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/disco-lang/disco
license:            BSD-3-Clause
license-file:       LICENSE
author:             Brent Yorgey
maintainer:         byorgey@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable disco-wasm
    import:           warnings
    main-is:          DiscoWASM.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.19.1.0 && <= 4.21
    build-depends:
      , base >= 4.16
      , ghc-experimental
      , disco
    ghc-options:
      -rtsopts
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=discoWasm"

    hs-source-dirs:   app
    default-language: GHC2021
