name:                stlc-provenance
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
copyright:           Brent Yorgey 2017
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     STLCSimpleProvenance
  other-modules:       Parsing2
  other-extensions:    DeriveFunctor, FlexibleInstances, GADTs, TemplateHaskell, TypeSynonymInstances
  build-depends:       base >=4.9 && <4.10,
                       mtl >=2.2 && <2.3,
                       containers >=0.5 && <0.6,
                       split,
                       lens,
                       parsec
  default-language:    Haskell2010
