name:                sub2
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
copyright:           Brent Yorgey 2017
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Sub2
  other-modules:       Parsing2, Graph, Subst, Types, Constraints, Unify, Solve
  other-extensions:    DeriveFunctor, FlexibleInstances, GADTs, TemplateHaskell, TypeSynonymInstances, DeriveGeneric
  build-depends:       base >=4.9 && <4.10,
                       mtl >=2.2 && <2.3,
                       containers >=0.5 && <0.6,
                       unbound-generics,
                       split,
                       lens,
                       fgl,
                       parsec,
                       haskeline
  default-language:    Haskell2010

executable sub2
  main-is:             Main.hs
  other-modules:       Sub2, Parsing2, Graph, Subst, Types, Constraints, Unify, Solve
  build-depends:       base >=4.9 && <4.10,
                       mtl >=2.2 && <2.3,
                       containers >=0.5 && <0.6,
                       unbound-generics,
                       split,
                       lens,
                       fgl,
                       parsec,
                       haskeline

  default-language:    Haskell2010
